# Strata

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
livemeta/: __init__.py
livemeta/api/: __init__.py  app.py
livemeta/cli/: app.py
livemeta/core/: __init__.py  demo.py  diff.py  extract.py  extract_text.py  grade.py  homogeneity.py  living.py  llm.py  pipeline.py  prisma.py  rob.py  schema.py  screen.py  search.py  store.py  store_pg.py  validate.py
livemeta/mcp/: server.py
static_web/: index.html
static_web/assets/: index-A5Rva2Js.js  index-BQJETw8p.css  index-BZZriHHq.js  index-CG458FX5.js  index-CRhVg2XO.css  index-Ckj1nZkh.js  index-CzpKH1dJ.css  index-DkIlh_e7.js  index-DsjdFJny.css  (+3 more)
tests/: glp1_fixtures.py  test_api.py  test_appraisal_bdd.py  test_assumptions.py  test_ci_api.py  test_ci_ask.py  test_ci_changefeed.py  test_ci_compare.py  test_ci_ctgov.py  test_ci_dossier.py  test_ci_radar.py  test_ci_service.py  test_ci_store.py  test_ci_subpop.py  test_ci_trialdetail.py  test_ci_v2_api.py  test_ci_v2_mcp.py  test_ci_v2_schema.py  test_ci_v2_store.py  test_cli_app.py  test_cli_bdd.py  test_cli_plot.py  test_cli_render.py  test_clinicaltrials.py  test_diff.py  test_europepmc.py  test_extract.py  test_extract_text.py  test_grade.py  test_homogeneity.py  test_homogeneity_bdd.py  test_human_review_bdd.py  test_living.py  test_living_bdd.py  test_llm.py  test_mcp_bdd.py  test_mcp_server.py  test_openfda.py  test_pipeline.py  test_pipeline_bdd.py  (+12 more)
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+110 files in other folders)
