[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livemeta"
version = "0.1.0"
description = "Living meta-analysis tool — retrieve, extract with provenance, validate, and pool clinical trial evidence."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "statsmodels>=0.14",
    "pymare>=0.0.4",
    "matplotlib>=3.8",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["livemeta"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
bdd_features_base_dir = "tests/features"

# Stats engine selection: "auto" prefers the metafor Rscript bridge, falls back
# to the pure-Python engine when R/metafor is unavailable. Override with
# LIVEMETA_STATS_ENGINE = "metafor" | "python".
